--- a/e-commerce/package.json
+++ b/e-commerce/package.json
@@ -11,5 +11,8 @@
   "devDependencies": {
     "tailwindcss": "^3.4.12",
     "vite": "^5.4.1"
+  },
+  "dependencies": {
+    "@clerk/clerk-js": "^5.22.3"
   }
 }
